--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+/* .counter { */
+/* margin: auto; */
+/* padding: 10px; */
+/* text-align: center; */
+/* border: 3px solid gray; */
+/* width: 30%; */
+/* position: absolute; */
+/* top: 50%; */
+/* left: 50%; */
+/* } */
+/*  */
+
+.counter {
   text-align: center;
+  width: 200px;
+  border-radius: 5px;
+  /* background: #e7e7e7; */
+  padding: 10px;
+  height: 100px;
+  position: absolute;
+  margin-top: -50px;
+  margin-left: -100px;
+  top: 50%;
+  left: 50%;
+}
+.dark_button {
+  color: #30475e;
+  background-color: #ececec;
+  border: 2px solid #c1a57b;
+}
+.button {
+  padding-bottom: 22px;
+}
+button {
+  margin: 0 3px 0 3px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dayLight {
+  background-color: rgb(221, 202, 31);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.darkMode {
+  background-color: #222831;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mode {
+  position: absolute;
+  top: -40%;
+  left: 30%;
+  color: black;
 }
